on tablets there is not enough space inside the nav bar, so the logo goes really small, reduce padding on either side to stop this.

--- a/wp-content/themes/sydneytheme/src/sass/header.scss
+++ b/wp-content/themes/sydneytheme/src/sass/header.scss
@@ -31,6 +31,10 @@
     &.sticky {
 
         @include breakpoint(tablet) {
+            padding: 10px 26px;
+        }
+
+        @include breakpoint(smalldesktop) {
             padding: 10px 40px;
         }
     
